periodics: Quotes are required around CLUSTER_TYPE and BRANCH
These may contain numbers, which YAML has special logic for handling
that change types.

--- a/ci-operator/jobs/openshift/release/openshift-release-release-4.1-periodics.yaml
+++ b/ci-operator/jobs/openshift/release/openshift-release-release-4.1-periodics.yaml
@@ -180,26 +180,26 @@ periodics:
                 memory: 200Mi
           tag_specification:
             cluster: https://api.ci.openshift.org
-            name: $(BRANCH)
+            name: "$(BRANCH)"
             namespace: ocp
           tests:
           - as: e2e-$(CLUSTER_TYPE)
             commands: TEST_SUITE=openshift/conformance/parallel run-tests
             openshift_installer:
-              cluster_profile: $(CLUSTER_TYPE)
+              cluster_profile: "$(CLUSTER_TYPE)"
           - as: e2e-$(CLUSTER_TYPE)-serial
             commands: TEST_SUITE=openshift/conformance/serial run-tests
             openshift_installer:
-              cluster_profile: $(CLUSTER_TYPE)
+              cluster_profile: "$(CLUSTER_TYPE)"
           - as: e2e-$(CLUSTER_TYPE)-upgrade
             commands: TEST_SUITE=all run-upgrade-tests
             openshift_installer:
-              cluster_profile: $(CLUSTER_TYPE)
+              cluster_profile: "$(CLUSTER_TYPE)"
               upgrade: true
           - as: launch-$(CLUSTER_TYPE)
             commands: sleep 9000 & wait
             openshift_installer:
-              cluster_profile: $(CLUSTER_TYPE)
+              cluster_profile: "$(CLUSTER_TYPE)"
       - name: JOB_NAME_SAFE
         value: e2e-aws
       - name: TEST_COMMAND
@@ -299,26 +299,26 @@ periodics:
                 memory: 200Mi
           tag_specification:
             cluster: https://api.ci.openshift.org
-            name: $(BRANCH)
+            name: "$(BRANCH)"
             namespace: ocp
           tests:
           - as: e2e-$(CLUSTER_TYPE)
             commands: TEST_SUITE=openshift/conformance/parallel run-tests
             openshift_installer:
-              cluster_profile: $(CLUSTER_TYPE)
+              cluster_profile: "$(CLUSTER_TYPE)"
           - as: e2e-$(CLUSTER_TYPE)-serial
             commands: TEST_SUITE=openshift/conformance/serial run-tests
             openshift_installer:
-              cluster_profile: $(CLUSTER_TYPE)
+              cluster_profile: "$(CLUSTER_TYPE)"
           - as: e2e-$(CLUSTER_TYPE)-upgrade
             commands: TEST_SUITE=all run-upgrade-tests
             openshift_installer:
-              cluster_profile: $(CLUSTER_TYPE)
+              cluster_profile: "$(CLUSTER_TYPE)"
               upgrade: true
           - as: launch-$(CLUSTER_TYPE)
             commands: sleep 9000 & wait
             openshift_installer:
-              cluster_profile: $(CLUSTER_TYPE)
+              cluster_profile: "$(CLUSTER_TYPE)"
       - name: JOB_NAME_SAFE
         value: e2e-aws-serial
       - name: TEST_COMMAND
@@ -417,26 +417,26 @@ periodics:
                 memory: 200Mi
           tag_specification:
             cluster: https://api.ci.openshift.org
-            name: $(BRANCH)
+            name: "$(BRANCH)"
             namespace: ocp
           tests:
           - as: e2e-$(CLUSTER_TYPE)
             commands: TEST_SUITE=openshift/conformance/parallel run-tests
             openshift_installer:
-              cluster_profile: $(CLUSTER_TYPE)
+              cluster_profile: "$(CLUSTER_TYPE)"
           - as: e2e-$(CLUSTER_TYPE)-serial
             commands: TEST_SUITE=openshift/conformance/serial run-tests
             openshift_installer:
-              cluster_profile: $(CLUSTER_TYPE)
+              cluster_profile: "$(CLUSTER_TYPE)"
           - as: e2e-$(CLUSTER_TYPE)-upgrade
             commands: TEST_SUITE=all run-upgrade-tests
             openshift_installer:
-              cluster_profile: $(CLUSTER_TYPE)
+              cluster_profile: "$(CLUSTER_TYPE)"
               upgrade: true
           - as: launch-$(CLUSTER_TYPE)
             commands: sleep 9000 & wait
             openshift_installer:
-              cluster_profile: $(CLUSTER_TYPE)
+              cluster_profile: "$(CLUSTER_TYPE)"
       - name: JOB_NAME_SAFE
         value: e2e-aws
       - name: TEST_COMMAND
@@ -535,26 +535,26 @@ periodics:
                 memory: 200Mi
           tag_specification:
             cluster: https://api.ci.openshift.org
-            name: $(BRANCH)
+            name: "$(BRANCH)"
             namespace: ocp
           tests:
           - as: e2e-$(CLUSTER_TYPE)
             commands: TEST_SUITE=openshift/conformance/parallel run-tests
             openshift_installer:
-              cluster_profile: $(CLUSTER_TYPE)
+              cluster_profile: "$(CLUSTER_TYPE)"
           - as: e2e-$(CLUSTER_TYPE)-serial
             commands: TEST_SUITE=openshift/conformance/serial run-tests
             openshift_installer:
-              cluster_profile: $(CLUSTER_TYPE)
+              cluster_profile: "$(CLUSTER_TYPE)"
           - as: e2e-$(CLUSTER_TYPE)-upgrade
             commands: TEST_SUITE=all run-upgrade-tests
             openshift_installer:
-              cluster_profile: $(CLUSTER_TYPE)
+              cluster_profile: "$(CLUSTER_TYPE)"
               upgrade: true
           - as: launch-$(CLUSTER_TYPE)
             commands: sleep 9000 & wait
             openshift_installer:
-              cluster_profile: $(CLUSTER_TYPE)
+              cluster_profile: "$(CLUSTER_TYPE)"
       - name: JOB_NAME_SAFE
         value: e2e-aws-serial
       - name: TEST_COMMAND
