--- a/ci-operator/jobs/openshift/release/openshift-release-infra-periodics.yaml
+++ b/ci-operator/jobs/openshift/release/openshift-release-infra-periodics.yaml
@@ -46,26 +46,26 @@ periodics:
                 memory: 200Mi
           tag_specification:
             cluster: https://api.ci.openshift.org
-            name: $(BRANCH)
+            name: "$(BRANCH)"
             namespace: ocp
           tests:
           - as: e2e-$(CLUSTER_TYPE)
             commands: TEST_SUITE=openshift/conformance/parallel run-tests
             openshift_installer:
-              cluster_profile: $(CLUSTER_TYPE)
+              cluster_profile: "$(CLUSTER_TYPE)"
           - as: e2e-$(CLUSTER_TYPE)-serial
             commands: TEST_SUITE=openshift/conformance/serial run-tests
             openshift_installer:
-              cluster_profile: $(CLUSTER_TYPE)
+              cluster_profile: "$(CLUSTER_TYPE)"
           - as: e2e-$(CLUSTER_TYPE)-upgrade
             commands: TEST_SUITE=all run-upgrade-tests
             openshift_installer:
-              cluster_profile: $(CLUSTER_TYPE)
+              cluster_profile: "$(CLUSTER_TYPE)"
               upgrade: true
           - as: launch-$(CLUSTER_TYPE)
             commands: sleep $(CLUSTER_DURATION) & wait
             openshift_installer:
-              cluster_profile: $(CLUSTER_TYPE)
+              cluster_profile: "$(CLUSTER_TYPE)"
       - name: JOB_NAME_SAFE
         value: launch-aws
       - name: TEST_COMMAND
@@ -171,26 +171,26 @@ periodics:
                 memory: 200Mi
           tag_specification:
             cluster: https://api.ci.openshift.org
-            name: $(BRANCH)
+            name: "$(BRANCH)"
             namespace: ocp
           tests:
           - as: e2e-$(CLOUD_TYPE)
             commands: TEST_SUITE=openshift/conformance/parallel run-tests
             openshift_installer:
-              cluster_profile: $(CLUSTER_TYPE)
+              cluster_profile: "$(CLUSTER_TYPE)"
           - as: e2e-$(CLOUD_TYPE)-serial
             commands: TEST_SUITE=openshift/conformance/serial run-tests
             openshift_installer:
-              cluster_profile: $(CLUSTER_TYPE)
+              cluster_profile: "$(CLUSTER_TYPE)"
           - as: e2e-$(CLOUD_TYPE)-upgrade
             commands: TEST_SUITE=all run-upgrade-tests
             openshift_installer:
-              cluster_profile: $(CLUSTER_TYPE)
+              cluster_profile: "$(CLUSTER_TYPE)"
               upgrade: true
           - as: launch-$(CLOUD_TYPE)
             commands: sleep $(CLUSTER_DURATION) & wait
             openshift_installer:
-              cluster_profile: $(CLUSTER_TYPE)
+              cluster_profile: "$(CLUSTER_TYPE)"
       - name: JOB_NAME_SAFE
         value: launch-azure
       - name: TEST_COMMAND
@@ -294,26 +294,26 @@ periodics:
                 memory: 200Mi
           tag_specification:
             cluster: https://api.ci.openshift.org
-            name: $(BRANCH)
+            name: "$(BRANCH)"
             namespace: ocp
           tests:
           - as: e2e-$(CLUSTER_TYPE)
             commands: TEST_SUITE=openshift/conformance/parallel run-tests
             openshift_installer:
-              cluster_profile: $(CLUSTER_TYPE)
+              cluster_profile: "$(CLUSTER_TYPE)"
           - as: e2e-$(CLUSTER_TYPE)-serial
             commands: TEST_SUITE=openshift/conformance/serial run-tests
             openshift_installer:
-              cluster_profile: $(CLUSTER_TYPE)
+              cluster_profile: "$(CLUSTER_TYPE)"
           - as: e2e-$(CLUSTER_TYPE)-upgrade
             commands: TEST_SUITE=all run-upgrade-tests
             openshift_installer:
-              cluster_profile: $(CLUSTER_TYPE)
+              cluster_profile: "$(CLUSTER_TYPE)"
               upgrade: true
           - as: launch-$(CLUSTER_TYPE)
             commands: sleep $(CLUSTER_DURATION) & wait
             openshift_installer:
-              cluster_profile: $(CLUSTER_TYPE)
+              cluster_profile: "$(CLUSTER_TYPE)"
       - name: JOB_NAME_SAFE
         value: launch-gcp
       - name: TEST_COMMAND
@@ -414,7 +414,7 @@ periodics:
                 memory: 200Mi
           tag_specification:
             cluster: https://api.ci.openshift.org
-            name: $(BRANCH)
+            name: "$(BRANCH)"
             namespace: ocp
           tests:
           - as: e2e-$(CLUSTER_TYPE)
@@ -528,26 +528,26 @@ periodics:
                 memory: 200Mi
           tag_specification:
             cluster: https://api.ci.openshift.org
-            name: $(BRANCH)
+            name: "$(BRANCH)"
             namespace: ocp
           tests:
           - as: e2e-$(CLUSTER_TYPE)
             commands: TEST_SUITE=openshift/conformance/parallel run-tests
             openshift_installer:
-              cluster_profile: $(CLUSTER_TYPE)
+              cluster_profile: "$(CLUSTER_TYPE)"
           - as: e2e-$(CLUSTER_TYPE)-serial
             commands: TEST_SUITE=openshift/conformance/serial run-tests
             openshift_installer:
-              cluster_profile: $(CLUSTER_TYPE)
+              cluster_profile: "$(CLUSTER_TYPE)"
           - as: e2e-$(CLUSTER_TYPE)-upgrade
             commands: TEST_SUITE=all run-upgrade-tests
             openshift_installer:
-              cluster_profile: $(CLUSTER_TYPE)
+              cluster_profile: "$(CLUSTER_TYPE)"
               upgrade: true
           - as: launch-$(CLUSTER_TYPE)
             commands: sleep $(CLUSTER_DURATION) & wait
             openshift_installer:
-              cluster_profile: $(CLUSTER_TYPE)
+              cluster_profile: "$(CLUSTER_TYPE)"
       - name: JOB_NAME_SAFE
         value: launch-vsphere
       - name: TEST_COMMAND
@@ -649,26 +649,26 @@ periodics:
                 memory: 200Mi
           tag_specification:
             cluster: https://api.ci.openshift.org
-            name: $(BRANCH)
+            name: "$(BRANCH)"
             namespace: ocp
           tests:
           - as: e2e-$(CLUSTER_TYPE)
             commands: TEST_SUITE=openshift/conformance/parallel run-tests
             openshift_installer:
-              cluster_profile: $(CLUSTER_TYPE)
+              cluster_profile: "$(CLUSTER_TYPE)"
           - as: e2e-$(CLUSTER_TYPE)-serial
             commands: TEST_SUITE=openshift/conformance/serial run-tests
             openshift_installer:
-              cluster_profile: $(CLUSTER_TYPE)
+              cluster_profile: "$(CLUSTER_TYPE)"
           - as: e2e-$(CLUSTER_TYPE)-upgrade
             commands: TEST_SUITE=all run-upgrade-tests
             openshift_installer:
-              cluster_profile: $(CLUSTER_TYPE)
+              cluster_profile: "$(CLUSTER_TYPE)"
               upgrade: true
           - as: launch-$(CLUSTER_TYPE)
             commands: sleep 9000 & wait
             openshift_installer:
-              cluster_profile: $(CLUSTER_TYPE)
+              cluster_profile: "$(CLUSTER_TYPE)"
       image: ci-operator:latest
       imagePullPolicy: Always
       name: ""
@@ -758,13 +758,13 @@ periodics:
                 memory: 200Mi
           tag_specification:
             cluster: https://api.ci.openshift.org
-            name: $(BRANCH)
+            name: "$(BRANCH)"
             namespace: ocp
           tests:
           - as: e2e-azure-upgrade
             commands: TEST_SUITE=all run-upgrade-tests
             openshift_installer:
-              cluster_profile: $(CLUSTER_TYPE)
+              cluster_profile: "$(CLUSTER_TYPE)"
               upgrade: true
       image: ci-operator:latest
       imagePullPolicy: Always
@@ -855,26 +855,26 @@ periodics:
                 memory: 200Mi
           tag_specification:
             cluster: https://api.ci.openshift.org
-            name: $(BRANCH)
+            name: "$(BRANCH)"
             namespace: ocp
           tests:
           - as: e2e-$(CLUSTER_TYPE)
             commands: TEST_SUITE=openshift/conformance/parallel run-tests
             openshift_installer:
-              cluster_profile: $(CLUSTER_TYPE)
+              cluster_profile: "$(CLUSTER_TYPE)"
           - as: e2e-$(CLUSTER_TYPE)-serial
             commands: TEST_SUITE=openshift/conformance/serial run-tests
             openshift_installer:
-              cluster_profile: $(CLUSTER_TYPE)
+              cluster_profile: "$(CLUSTER_TYPE)"
           - as: e2e-$(CLUSTER_TYPE)-upgrade
             commands: TEST_SUITE=all run-upgrade-tests
             openshift_installer:
-              cluster_profile: $(CLUSTER_TYPE)
+              cluster_profile: "$(CLUSTER_TYPE)"
               upgrade: true
           - as: launch-$(CLUSTER_TYPE)
             commands: sleep 9000 & wait
             openshift_installer:
-              cluster_profile: $(CLUSTER_TYPE)
+              cluster_profile: "$(CLUSTER_TYPE)"
       image: ci-operator:latest
       imagePullPolicy: Always
       name: ""
