--- a/ci-operator/jobs/openshift/openshift-ansible/openshift-openshift-ansible-release-3.10-presubmits.yaml
+++ b/ci-operator/jobs/openshift/openshift-ansible/openshift-openshift-ansible-release-3.10-presubmits.yaml
@@ -16,6 +16,12 @@ presubmits:
           export RPM_REPO_OPENSHIFT_ORIGIN="$( curl -q "${RPM_REPO_BASEREF}" 2>/dev/null)"
           ci-operator \
             --artifact-dir=$(ARTIFACTS) \
+            --image-import-pull-secret=/etc/pull-secret/.dockerconfigjson \
+            --kubeconfig=/etc/apici/kubeconfig \
+            --resolver-address=http://ci-operator-configresolver-ci.svc.ci.openshift.org \
+            --org=openshift \
+            --repo=openshift-ansible \
+            --branch=release-3.10 \
             --secret-dir=/usr/local/e2e-gcp-cluster-profile \
             --template=/usr/local/e2e-gcp-major-upgrade-310 \
             --target=e2e-gcp-major-upgrade-310 \
@@ -54,11 +60,17 @@ presubmits:
           requests:
             cpu: 10m
         volumeMounts:
+        - mountPath: /etc/apici
+          name: apici-ci-operator-credentials
+          readOnly: true
         - mountPath: /usr/local/e2e-gcp-cluster-profile
           name: e2e-gcp-major-upgrade-310
         - mountPath: /usr/local/e2e-gcp-major-upgrade-310
           name: job-definition
           subPath: cluster-launch-e2e-upgrade.yaml
+        - mountPath: /etc/pull-secret
+          name: pull-secret
+          readOnly: true
       serviceAccountName: ci-operator
       volumes:
       - name: apici-ci-operator-credentials
@@ -100,6 +112,12 @@ presubmits:
           export RPM_REPO_OPENSHIFT_ORIGIN="$( curl -q "${RPM_REPO_BASEURL_REF}" 2>/dev/null)"
           ci-operator \
             --artifact-dir=$(ARTIFACTS) \
+            --image-import-pull-secret=/etc/pull-secret/.dockerconfigjson \
+            --kubeconfig=/etc/apici/kubeconfig \
+            --resolver-address=http://ci-operator-configresolver-ci.svc.ci.openshift.org \
+            --org=openshift \
+            --repo=openshift-ansible \
+            --branch=release-3.10 \
             --secret-dir=/usr/local/e2e-gcp-cluster-profile --template=/usr/local/e2e-gcp \
             --target=e2e-gcp
         env:
@@ -123,11 +141,17 @@ presubmits:
           requests:
             cpu: 10m
         volumeMounts:
+        - mountPath: /etc/apici
+          name: apici-ci-operator-credentials
+          readOnly: true
         - mountPath: /usr/local/e2e-gcp-cluster-profile
           name: cluster-profile
         - mountPath: /usr/local/e2e-gcp
           name: job-definition
           subPath: cluster-launch-e2e.yaml
+        - mountPath: /etc/pull-secret
+          name: pull-secret
+          readOnly: true
       serviceAccountName: ci-operator
       volumes:
       - name: apici-ci-operator-credentials
@@ -166,6 +190,12 @@ presubmits:
           export RPM_REPO_OPENSHIFT_ORIGIN="$( curl -q "${RPM_REPO_BASEREF}" 2>/dev/null)"
           ci-operator \
             --artifact-dir=$(ARTIFACTS) \
+            --image-import-pull-secret=/etc/pull-secret/.dockerconfigjson \
+            --kubeconfig=/etc/apici/kubeconfig \
+            --resolver-address=http://ci-operator-configresolver-ci.svc.ci.openshift.org \
+            --org=openshift \
+            --repo=openshift-ansible \
+            --branch=release-3.10 \
             --secret-dir=/usr/local/e2e-atomic-cluster-profile \
             --template=/usr/local/e2e-atomic \
             --target=e2e-atomic \
@@ -194,11 +224,17 @@ presubmits:
           requests:
             cpu: 10m
         volumeMounts:
+        - mountPath: /etc/apici
+          name: apici-ci-operator-credentials
+          readOnly: true
         - mountPath: /usr/local/e2e-atomic-cluster-profile
           name: cluster-profile
         - mountPath: /usr/local/e2e-atomic
           name: job-definition
           subPath: cluster-launch-e2e-openshift-ansible.yaml
+        - mountPath: /etc/pull-secret
+          name: pull-secret
+          readOnly: true
       serviceAccountName: ci-operator
       volumes:
       - name: apici-ci-operator-credentials
@@ -236,6 +272,12 @@ presubmits:
           export RPM_REPO_OPENSHIFT_ORIGIN="$( curl -q "${RPM_REPO_BASEREF}" 2>/dev/null)"
           ci-operator \
             --artifact-dir=$(ARTIFACTS) \
+            --image-import-pull-secret=/etc/pull-secret/.dockerconfigjson \
+            --kubeconfig=/etc/apici/kubeconfig \
+            --resolver-address=http://ci-operator-configresolver-ci.svc.ci.openshift.org \
+            --org=openshift \
+            --repo=openshift-ansible \
+            --branch=release-3.10 \
             --secret-dir=/usr/local/e2e-aws-cluster-profile \
             --template=/usr/local/e2e-aws \
             --target=e2e-aws \
@@ -264,11 +306,17 @@ presubmits:
           requests:
             cpu: 10m
         volumeMounts:
+        - mountPath: /etc/apici
+          name: apici-ci-operator-credentials
+          readOnly: true
         - mountPath: /usr/local/e2e-aws-cluster-profile
           name: cluster-profile
         - mountPath: /usr/local/e2e-aws
           name: job-definition
           subPath: cluster-launch-e2e-openshift-ansible.yaml
+        - mountPath: /etc/pull-secret
+          name: pull-secret
+          readOnly: true
       serviceAccountName: ci-operator
       volumes:
       - name: apici-ci-operator-credentials
@@ -311,6 +359,12 @@ presubmits:
           export RPM_REPO_OPENSHIFT_ORIGIN="$( curl -q "${RPM_REPO_BASEREF}" 2>/dev/null)"
           ci-operator \
             --artifact-dir=$(ARTIFACTS) \
+            --image-import-pull-secret=/etc/pull-secret/.dockerconfigjson \
+            --kubeconfig=/etc/apici/kubeconfig \
+            --resolver-address=http://ci-operator-configresolver-ci.svc.ci.openshift.org \
+            --org=openshift \
+            --repo=openshift-ansible \
+            --branch=release-3.10 \
             --give-pr-author-access-to-namespace=true \
             --secret-dir=/usr/local/e2e-gluster-cluster-profile \
             --target=e2e-gluster \
@@ -340,11 +394,17 @@ presubmits:
           requests:
             cpu: 10m
         volumeMounts:
+        - mountPath: /etc/apici
+          name: apici-ci-operator-credentials
+          readOnly: true
         - mountPath: /usr/local/e2e-gluster-cluster-profile
           name: cluster-profile
         - mountPath: /usr/local/e2e-gluster
           name: job-definition
           subPath: cluster-launch-e2e-openshift-ansible.yaml
+        - mountPath: /etc/pull-secret
+          name: pull-secret
+          readOnly: true
       serviceAccountName: ci-operator
       volumes:
       - name: apici-ci-operator-credentials
