--- a/ci-operator/jobs/openshift/windows-machine-config-bootstrapper/openshift-windows-machine-config-bootstrapper-master-presubmits.yaml
+++ b/ci-operator/jobs/openshift/windows-machine-config-bootstrapper/openshift-windows-machine-config-bootstrapper-master-presubmits.yaml
@@ -168,6 +168,7 @@ presubmits:
     always_run: true
     branches:
     - master
+    cluster: ci/api-build01-ci-devcluster-openshift-com:6443
     context: ci/prow/e2e-wsu
     decorate: true
     decoration_config:
@@ -197,6 +198,8 @@ presubmits:
         command:
         - ci-operator
         env:
+        - name: FOO
+          value: BAR
         - name: CLUSTER_TYPE
           value: aws
         - name: CLUSTER_VARIANT
