--- a/ci-operator/config/openshift/tektoncd-triggers/openshift-tektoncd-triggers-release-next.yaml
+++ b/ci-operator/config/openshift/tektoncd-triggers/openshift-tektoncd-triggers-release-next.yaml
@@ -6,11 +6,8 @@ base_images:
     tag: base
 binary_build_commands: make install
 build_root:
-  image_stream_tag:
-    cluster: https://api.ci.openshift.org
-    name: release
-    namespace: openshift
-    tag: golang-1.13
+  project_image:
+    dockerfile_path: openshift/ci-operator/build-image/Dockerfile
 canonical_go_repository: github.com/tektoncd/triggers
 images:
 - dockerfile_path: openshift/ci-operator/tekton-images/controller/Dockerfile
