Add e2e job for csi-external-resizer sidecar

--- a/ci-operator/config/openshift/csi-external-resizer/openshift-csi-external-resizer-master.yaml
+++ b/ci-operator/config/openshift/csi-external-resizer/openshift-csi-external-resizer-master.yaml
@@ -38,3 +38,7 @@ tests:
   commands: make test
   container:
     from: src
+- as: e2e-aws-csi
+  commands: TEST_INSTALL_CSI_DRIVERS=aws-ebs TEST_SUITE=openshift/csi run-tests
+  openshift_installer:
+    cluster_profile: aws
