patch cluster-up provider
Signed-off-by: Daniel Hiller <daniel.hiller.1972@gmail.com>

--- a/ci-operator/config/kubevirt/kubevirt/kubevirt-kubevirt-master.yaml
+++ b/ci-operator/config/kubevirt/kubevirt/kubevirt-kubevirt-master.yaml
@@ -88,6 +88,7 @@ tests:
         if ! oc debug node/"${workers_each[i]}" -- ls /dev/kvm; then oc debug node/"${workers_each[i]}" -- ls /dev/kvm; fi
     done
     echo "calling cluster-up to prepare config and check whether cluster is reachable"
+    (cd cluster-up/cluster/external && curl -L -O -o provider.sh https://raw.githubusercontent.com/dhiller/kubevirtci/fix-external-provider/cluster-up/cluster/external/provider.sh)
     bash -x ./cluster-up/up.sh
     echo "checking cluster configuration after config prep"
     kubectl config view
