OpenStack: rename Smoke to Early
In origin commit 07bef47, the `Smoke` tests were renamed to `Early`,
causing the `run-minimal-tests()` function to fail with:

  error: suite "files" does not contain any tests

The same fix should be ported to oVirt platform.

--- a/ci-operator/templates/openshift/installer/cluster-launch-installer-openstack-e2e.yaml
+++ b/ci-operator/templates/openshift/installer/cluster-launch-installer-openstack-e2e.yaml
@@ -207,10 +207,10 @@ objects:
         }
 
         function run-minimal-tests() {
-          # Only execute Smoke tests while the test infrastructure is getting
+          # Only execute Early tests while the test infrastructure is getting
           # prepared to run the actual suite reliably.
           openshift-tests run openshift/conformance/parallel --dry-run |
-            grep 'Smoke' |
+            grep 'Early' |
           openshift-tests run -o /tmp/artifacts/e2e.log \
             --junit-dir /tmp/artifacts/junit -f -
           return 0
