--- a/ci-operator/config/openshift/compliance-operator/openshift-compliance-operator-release-4.4.yaml
+++ b/ci-operator/config/openshift/compliance-operator/openshift-compliance-operator-release-4.4.yaml
@@ -17,6 +17,9 @@ images:
 - dockerfile_path: images/resultscollector/Dockerfile.ci
   from: base
   to: compliance-resultscollector
+- dockerfile_path: images/resultserver/Dockerfile.ci
+  from: base
+  to: compliance-resultserver
 promotion:
   disabled: true
   name: "4.4"
