Add debugging info
Signed-off-by: Daniel Hiller <daniel.hiller.1972@gmail.com>

--- a/ci-operator/jobs/kubevirt/kubevirt/kubevirt-kubevirt-master-presubmits.yaml
+++ b/ci-operator/jobs/kubevirt/kubevirt/kubevirt-kubevirt-master-presubmits.yaml
@@ -104,6 +104,9 @@ presubmits:
             done
             echo "calling cluster-up to prepare config and check whether cluster is reachable"
             (cd cluster-up/cluster/external && curl -L -O -o provider.sh https://raw.githubusercontent.com/dhiller/kubevirtci/fix-external-provider/cluster-up/cluster/external/provider.sh)
+            ls -la /go/src/kubevirt.io/kubevirt/_ci-configs/external
+            ls -la "${KUBECONFIG}"
+            touch /go/src/kubevirt.io/kubevirt/_ci-configs/external/test.touch
             bash -x ./cluster-up/up.sh
             echo "checking cluster configuration after config prep"
             kubectl config view
