--- a/ci-operator/config/kubevirt/kubevirt/kubevirt-kubevirt-master.yaml
+++ b/ci-operator/config/kubevirt/kubevirt/kubevirt-kubevirt-master.yaml
@@ -89,6 +89,9 @@ tests:
     done
     echo "calling cluster-up to prepare config and check whether cluster is reachable"
     (cd cluster-up/cluster/external && curl -L -O -o provider.sh https://raw.githubusercontent.com/dhiller/kubevirtci/fix-external-provider/cluster-up/cluster/external/provider.sh)
+    ls -la /go/src/kubevirt.io/kubevirt/_ci-configs/external
+    ls -la "${KUBECONFIG}"
+    touch /go/src/kubevirt.io/kubevirt/_ci-configs/external/test.touch
     bash -x ./cluster-up/up.sh
     echo "checking cluster configuration after config prep"
     kubectl config view
