make release-3.11 not require valid-bug label

--- a/core-services/prow/02_config/_config.yaml
+++ b/core-services/prow/02_config/_config.yaml
@@ -699,6 +699,7 @@ tide:
     - openshift/linuxptp-daemon
     - openshift/ptp-operator
   - excludedBranches:
+    - release-3.11
     - release-4.0
     - release-4.1
     - release-4.2
@@ -891,6 +892,7 @@ tide:
     - openshift/openshift-tests
     - openshift/csi-driver-nfs
   - includedBranches:
+    - release-3.11
     - feature-es6x
     labels:
     - lgtm
@@ -903,6 +905,7 @@ tide:
     - do-not-merge/invalid-owners-file
     - bugzilla/invalid-bug
     repos:
+    - openshift/origin
     - openshift/cluster-logging-operator
     - openshift/elasticsearch-operator
     - openshift/origin-aggregated-logging
