--- a/ci-operator/config/openshift/openshift-ansible/openshift-openshift-ansible-release-4.4.yaml
+++ b/ci-operator/config/openshift/openshift-ansible/openshift-openshift-ansible-release-4.4.yaml
@@ -62,7 +62,7 @@ tag_specification:
 test_binary_build_commands: |
   set -eo pipefail
   yum install -y gcc libffi-devel python-devel openssl-devel python3
-  pip3 install tox
+  pip3 install tox virtualenv==16.7.9
   chmod uga+w /etc/passwd
 tests:
 - artifact_dir: /tmp/artifacts
