[WIP] Run the verification from the PR

--- a/ci-operator/config/redhat-developer/service-binding-operator/redhat-developer-service-binding-operator-master__4.4.yaml
+++ b/ci-operator/config/redhat-developer/service-binding-operator/redhat-developer-service-binding-operator-master__4.4.yaml
@@ -39,3 +39,7 @@ tests:
   cron: 0 */2 * * *
   openshift_installer_src:
     cluster_profile: aws
+- as: dev-release-try
+  commands: make dev-release
+  openshift_installer_src:
+    cluster_profile: aws
