Add skip tests for ocp, set output file path for results
Signed-off-by: Daniel Hiller <daniel.hiller.1972@gmail.com>

--- a/ci-operator/config/kubevirt/kubevirt/kubevirt-kubevirt-master.yaml
+++ b/ci-operator/config/kubevirt/kubevirt/kubevirt-kubevirt-master.yaml
@@ -97,7 +97,7 @@ tests:
     echo "checking pods for kubevirt"
     oc get pods -n kubevirt
     echo "testing"
-    bash -x ./hack/functests.sh
+    FUNC_TEST_ARGS='--ginkgo.skip=Genie|SRIOV|GPU --junit-output=$(pwd)/exported-artifacts/junit.functest.xml' bash -x ./hack/functests.sh
 
   openshift_installer_custom_test_image:
     cluster_profile: gcp
