--- a/ci-operator/jobs/kubevirt/kubevirt/kubevirt-kubevirt-master-presubmits.yaml
+++ b/ci-operator/jobs/kubevirt/kubevirt/kubevirt-kubevirt-master-presubmits.yaml
@@ -112,7 +112,7 @@ presubmits:
             echo "checking pods for kubevirt"
             oc get pods -n kubevirt
             echo "testing"
-            bash -x ./hack/functests.sh
+            FUNC_TEST_ARGS='--ginkgo.skip=Genie|SRIOV|GPU --junit-output=$(pwd)/exported-artifacts/junit.functest.xml' bash -x ./hack/functests.sh
         - name: TEST_IMAGESTREAM_TAG
           value: pipeline:kubevirt-test
         image: ci-operator:latest
