--- a/ci-operator/config/openshift/knative-eventing/openshift-knative-eventing-release-next.yaml
+++ b/ci-operator/config/openshift/knative-eventing/openshift-knative-eventing-release-next.yaml
@@ -18,6 +18,14 @@ images:
       - destination_dir: .
         source_path: /go/bin/apiserver_receive_adapter
   to: knative-eventing-apiserver-receive-adapter
+- dockerfile_path: openshift/ci-operator/knative-images/channel_broker/Dockerfile
+  from: base
+  inputs:
+    bin:
+      paths:
+      - destination_dir: .
+        source_path: /go/bin/channel_broker
+  to: knative-eventing-channel-broker
 - dockerfile_path: openshift/ci-operator/knative-images/channel_controller/Dockerfile
   from: base
   inputs:
