debug pull-ci-openshift-kni-cnf-features-deploy-master-ci

--- a/ci-operator/jobs/openshift/knative-serving/openshift-knative-serving-release-next-presubmits.yaml
+++ b/ci-operator/jobs/openshift/knative-serving/openshift-knative-serving-release-next-presubmits.yaml
@@ -5,6 +5,7 @@ presubmits:
     branches:
     - release-next
     context: ci/prow/4.3-e2e-aws-ocp-43
+    cluster: ci/api-build01-ci-devcluster-openshift-com:6443
     decorate: true
     decoration_config:
       skip_cloning: true
