tide: merge also release-3.11 branch of openshift/ansible

--- a/core-services/prow/02_config/_config.yaml
+++ b/core-services/prow/02_config/_config.yaml
@@ -905,6 +905,7 @@ tide:
     - do-not-merge/invalid-owners-file
     - bugzilla/invalid-bug
     repos:
+    - openshift/openshift-ansible
     - openshift/origin
     - openshift/cluster-logging-operator
     - openshift/elasticsearch-operator
